content/assets/style.css
@font-face{
	font-family:Poppins;
	font-display:swap;
	src:url(https://www.ari-khan.com/assets/poppins/Poppins-Medium-Subset.woff2) format('woff2');
	font-weight:400;
	font-style:normal
}
@font-face{
	font-family:Poppins;
	font-display:swap;
	src:url(https://www.ari-khan.com/assets/poppins/Poppins-Bold-Subset.woff2) format('woff2');
	font-weight:600;
	font-style:normal
}
@font-face{
	font-family:Foldit;
	font-display:swap;
	src:url(https://www.ari-khan.com/assets/foldit/Foldit-VariableFont_wght.woff2) format('woff2');
	font-weight:650;
	font-style:normal
}
body,html{
	margin:0;
	padding:0;
	box-sizing:border-box;
	padding-top:36px;
	height:100%;
	width:100%;
	overflow-x:hidden;
	font-family:Poppins,sans-serif
}
a{
	text-decoration:none;
	color:inherit
}
::-webkit-scrollbar{
	width:.75vw;
	height:.75vh
}
::-webkit-scrollbar-thumb{
	background:#ccc;
	border-radius:6px
}
::-webkit-scrollbar-thumb:hover{
	background:#aaa
}
::-webkit-scrollbar-track{
	background:#eee
}
nav{
	position:fixed;
	top:0;
	left:0;
	width:100%;
	background-color:#fff;
	border-bottom:5px solid #1973fa;
	text-align:center;
	z-index:3;
	overflow-x:auto;
	padding-left:10.3vw;
	box-sizing:border-box
}
nav ul{
	list-style:none;
	margin:0;
	padding:0;
	display:flex;
	justify-content:left
}
nav ul li a{
	display:block;
	color:#000;
	padding:21px 50px 14px;
	font-size:22px;
	opacity:.8;
	font-family:Poppins,sans-serif
}
nav ul li a:hover{
	color:#fad700
}
.bottom-logo,.logo{
	font-family:Foldit,sans-serif;
	font-size:36px;
	opacity:.8;
	text-align:center
}
.logo{
	padding:15px 10vw 0 50px;
	white-space:nowrap
}
.bottom-logo{
	display:inline-block;
	position:relative;
	text-decoration:none;
	padding:0;
	line-height:1
}
.bottom-logo::after{
	content:'';
	position:absolute;
	left:0;
	bottom:-1px;
	width:100%;
	height:4px;
	background-color:#1973fa;
	transform:scaleX(0);
	transform-origin:bottom left;
	transition:transform .3s ease-in-out
}
.bottom-logo:hover::after{
	transform:scaleX(1)
}
.logo-container{
	background-color:#fff;
	padding:50px;
	border-radius:12px;
	box-shadow:0 4px 8px rgba(0,0,0,.4);
	margin:20px auto;
	width:32.55%;
	text-align:center
}
.header{
	font-family:Poppins,sans-serif;
	font-size:clamp(28px,8vw,42px);
	font-weight:500;
	text-align:center
}
.aiheader{
	font-family:Poppins,sans-serif;
	font-size:42px;
	font-weight:500;
	text-align:center;
	margin-bottom:0
}
.middlesubheader{
	font-family:Poppins,sans-serif;
	font-size:18px;
	font-weight:500;
	text-align:center;
	margin-top:0;
	margin-bottom:20px
}
.text-box{
	font-family:Poppins,sans-serif;
	width:50%;
	padding:10px;
	font-size:16px;
	border:3px solid #000;
	border-radius:10px;
	margin:auto;
	display:block;
	margin-top:20px;
	margin-bottom:40px;
	height:25px;
	line-height:1.5;
	resize:none;
	overflow-y:auto
}
@media (orientation:portrait){
	.text-box{
		width:75%
}
}
.outer-box{
	font-family:Poppins,sans-serif;
	width:50%;
	height:57%;
	margin:auto;
	text-align:center;
	border:3px solid #000;
	border-radius:20px;
	padding:10px;
	margin-bottom:20px;
	display:flex;
	position:relative;
	flex-direction:column
}
@media (orientation:portrait){
	.outer-box{
		width:75%
}
}
.button-group{
	display:flex;
	position:absolute;
	gap:10px;
	justify-content:flex-start
}
.clear-button,.delete-button{
	background-color:#fff;
	color:#000;
	border:3px solid #000;
	border-radius:20px;
	padding:6px 12px;
	font-size:14px;
	font-family:Poppins,sans-serif;
	cursor:pointer;
	transition:background-color .5s;
	min-width:75px
}
.clear-button{
	width:50%
}
.delete-button{
	width:50%
}
.clear-button:hover,.delete-button:hover{
	background-color:#ddd
}
.scroll-box{
	font-family:Poppins,sans-serif;
	flex-grow:1;
	width:94%;
	margin:auto;
	overflow-y:auto;
	padding:10px;
	border-radius:20px;
	background-color:#fff
}
.input-box{
	font-family:Poppins,sans-serif;
	width:50%;
	padding:10px;
	font-size:16px;
	border:3px solid #000;
	border-radius:10px;
	margin:auto;
	display:block;
	margin-top:20px;
	margin-bottom:40px;
	height:25px;
	line-height:1.5;
	resize:none;
	overflow-y:auto
}
@media (orientation:portrait){
	.input-box{
		width:75%
}
}
.image-outer-box{
	font-family:Poppins,sans-serif;
	width:50%;
	height:75%;
	margin:auto;
	text-align:center;
	border:3px solid #000;
	border-radius:20px;
	padding:10px;
	margin-bottom:20px;
	display:flex;
	flex-direction:column
}
@media (orientation:portrait){
	.image-outer-box{
		width:75%
}
}
.image-box{
	font-family:Poppins,sans-serif;
	flex-grow:1;
	width:96%;
	margin:auto;
	overflow-y:hidden;
	overflow-x:hidden;
	border-radius:20px;
	padding-top:10px;
	background-color:#fff
}
.spinner-container {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100%;
	width: 100%;
}
.spinner {
	border: 16px solid #efefef;
	border-top: 16px solid rgb(25, 115, 250);
	border-radius: 100%;
	width: 100px;
	height: 100px;
	animation: spin 1s linear infinite;
}
@keyframes spin{
	0%{
		transform:rotate(0)
}
	100%{
		transform:rotate(360deg)
}
}
.scroll-box::-webkit-scrollbar{
	width:6px;
	height:auto
}
.scroll-box::-webkit-scrollbar-thumb{
	background:#ccc;
	border-radius:6px
}
.scroll-box::-webkit-scrollbar-thumb:hover{
	background:#aaa
}
.scroll-box p{
	width:auto;
	display:inline;
	word-wrap:break-word;
	margin-left:auto;
	margin-right:auto;
	line-height:1.75
}
.kingbot{
	font-family:Poppins,sans-serif;
	color:#fff;
	font-size:64px;
	font-weight:500;
	text-align:left;
	padding-left:210px
}
.kingbotheader{
	font-family:Poppins,sans-serif;
	color:#fff;
	margin-top:-30px;
	font-size:24px;
	font-weight:500;
	text-align:left;
	padding-left:210px
}
.kingbottext{
	font-family:Poppins,sans-serif;
	color:#fff;
	font-size:18px;
	font-weight:500;
	text-align:left;
	padding-left:210px;
	max-width:500px
}
.trunalyze{
	font-family:Poppins,sans-serif;
	color:#fff;
	font-size:64px;
	font-weight:500;
	text-align:left;
	padding-left:210px
}
/* ... */

